[package]
name = "py_agp"
version = "0.1.0"
edition = "2021"

[lib]
name = "py_agp"
crate-type = ["cdylib", "lib"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"


[dependencies]
rayon = ">=1.5"

[dependencies.rug]
version = "1.17"
default-features = false
features = ["float"]

[dependencies.ndarray]
version = ">=0.15"
features = ["rayon"]

[dependencies.pyo3]
version = ">=0.16"
features = ["extension-module"]

[dependencies.numpy]
version = ">=0.16"
